@@ -8,7 +8,7 @@ Comment: This file documents the copyright statements and licenses for
 
 Files: *
 Copyright: 1996 Zenin
-  1996-1998, 2000-2002, 2005-2006, 2008-2012 Russ Allbery <rra@stanford.edu>
+  1996-1998, 2000-2002, 2005-2006, 2008-2013 Russ Allbery <rra@stanford.edu>
   2011 Revilo Reegiles
   2012 Stephen Thirlwall
   2012 Kurt Starsinic <kstarsinic@gmail.com>
